namespace GDD
{
    public enum RandomSkillType
    {
        All,
        BaseSkill,
        UpgradeSkill
    }
}